--- a/instructor-application-frontend/src/App.css
+++ b/instructor-application-frontend/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.head {
+  background-color: black;
+  height: 150px;
+  color: white;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.head-img {
+  width: 400px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-form {
+  display: flex;
+  align-items: center;
+  /* padding: 200px; */
+  margin: 30px;
+  padding-left: 200px;
+  /* padding-top: 120px; */
+  /* background-color: aqua; */
+}
+.border {
+  background-color: black;
+  width: 300px;
+  height: 250px;
+  /* margin: 20px; */
+  padding: 25px 25px;
+}
+.login-label {
+  font-size: 2rem;
+  color: aliceblue;
+}
+.sign-up-label {
+  font-size: 1rem;
+  color: aliceblue;
+  gap: 10px;
+}
+.sign-up-input {
+  /* padding-left: 10px; */
+  /* padding-right: 10px; */
+}
+.login-input {
+  width: 200px;
+  height: 30px;
+}
+.btn {
+  margin: 5px;
+  /* padding-top: 50px; */
+}
+.grid-sepration {
+  display: grid;
+  grid-template-rows: 1fr; /* Single row */
+  grid-template-columns: 1fr 1fr; /* Two columns with equal width */
+  gap: 10px;
+}
+.collabera {
+  background-color: black;
+  width: 300px;
+  height: 250px;
+}
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
 }
